added basic style reset

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Scroll Frame Test</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Asa Design</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <header class="site-header">
@@ -59,8 +59,6 @@
     <p>Scroll to explore 3D design, motion, and interactivity.</p>
     <a href="#projects" class="hero-button">See Projects</a>
   </div>
-
-  <div class="spacer"></div>
 
   <!-- NEW SECTION: Work Philosophy / Value -->
   <section id="approach" class="section">
