removed js and adjusted css file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Asa Design</title>
-  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="/css/main.css" />
 </head>
 <body>
   <header class="site-header">
@@ -121,8 +121,5 @@
     </div>
   </section>
 
-  <!-- ❗ Canvas at the very end -->
-  <canvas id="scrollCanvas" width="1280" height="720"></canvas>
-  <script src="script.js"></script>
 </body>
 </html>
