--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Asa Design</title>
   <link rel="stylesheet" href="/css/main.css" />
+  <link rel="stylesheet" href="/css/cards.css" /> 
   <link rel="stylesheet"
   href="https://fonts.googleapis.com/css?family=Noto+Sans">
 </head>
@@ -83,12 +84,12 @@
   <section id="services" class="section">
     <div class="content">
       <h2>What I Do</h2>
-      <ul class="service-list">
-        <li>🌀 Motion Graphics & Scroll Effects</li>
-        <li>🎨 3D Modeling & Wireframes</li>
-        <li>🔗 Web Interactivity (HTML/CSS/JS)</li>
-        <li>🧠 Conceptual Design Thinking</li>
-      </ul>
+      <div class="service-grid">
+        <div class="service-card">Motion Graphics & Scroll Effects</div>
+        <div class="service-card">3D Modeling & Wireframes</div>
+        <div class="service-card">Web Interactivity (HTML/CSS/JS)</div>
+        <div class="service-card">Conceptual Design Thinking</div>
+      </div>
     </div>
   </section>
 
