--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <div class="content">
       <h2>What I Do</h2>
       <div class="service-grid">
-        <div class="service-card">Motion Graphics & Scroll Effects</div>
+        <div class="service-card">Logo + Brand Identity</div>
         <div class="service-card">3D Modeling & Wireframes</div>
         <div class="service-card">Web Interactivity (HTML/CSS/JS)</div>
         <div class="service-card">Conceptual Design Thinking</div>
