--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <h1 class="logo">Asa Jernigan</h1>
     </div>
     <nav class="header-nav">
-      <a class="push" href="#projects">Projects</a>
+      <a href="#projects">Projects</a>
       <a href="#contact">Contact</a>
     </nav>
   </header>  
