--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <div class="hero-logo" id="heroLogo">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134.4 93.96" fill="#FFFFFF">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 134.4 93.96" fill="currentColor">
           <g>
             <path d="M45.49,6.18l3.62,17.04 2.52-12.48-1.09-4.55h-5.05Z"/>
             <path d="M58.77,6.18l-4.44,15.62-.23.79-.15.51-1.68,5.91h5.04l6.51-22.93c-1.68-.01-3.36-.01-5.03-.01Z"/>
