added link to home for svg

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <h1 class="logo">Asa Jernigan</h1>
     </div>
 
+    <a href="index.html">
     <div class="hero-logo" id="heroLogo">
       <svg id="Layer_1" data-name="Layer 1" viewBox="0 0 134.4 40" fill="currentColor" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
         <g>
@@ -52,6 +53,7 @@
         </g>
       </svg>
       </div>
+    </a>
 
     <nav class="header-nav">
       <a href="#projects">Projects</a>
