hero section changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/header.css" />
+  <link rel="stylesheet" href="/css/hero-section.css" />
+  <link rel="stylesheet" href="/css/buttons.css" />
   <link rel="stylesheet" href="/css/cards.css" /> 
   <link rel="stylesheet"
-  href="https://fonts.googleapis.com/css?family=Noto+Sans">
+  href="https://fonts.googleapis.com/css?family=Noto+Sans:regular,bold">
 </head>
 <body>
+
+  <!--HEADER-->
   <header class="site-header">
     <div class="header-left">
       <h1 class="logo">Asa Jernigan</h1>
@@ -60,12 +64,26 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>  
+<!--END OF HEADER-->
+
+<!--HERO SECTION-->
+
+
+  <div class="hero-image">
+   <div class="hero-text">
+    <h1>Welcome to My Portfolio</h1>
+    <p>Scroll to explore 3D design, motion, and interactivity.</p>
+    <a href="#projects" class="hero-button">See Projects</a>
+   </div>
+  </div>
 
   <div class="hero-card" id="heroCard">
     <h1>Welcome to My Portfolio</h1>
     <p>Scroll to explore 3D design, motion, and interactivity.</p>
-    <a href="#projects" class="hero-button">See Projects</a>
+    <a href="projects.html" class="hero-button">See Projects</a>
   </div>
+
+<!--END OF HEARO SECTION-->
 
   <!-- NEW SECTION: Work Philosophy / Value -->
   <section id="approach" class="section">
