--- a/index.html
+++ b/index.html
@@ -69,21 +69,17 @@
 <!--HERO SECTION-->
 
 
-  <div class="hero-image">
-   <div class="hero-text">
-    <h1>Welcome to My Portfolio</h1>
-    <p>Scroll to explore 3D design, motion, and interactivity.</p>
-    <a href="#projects" class="hero-button">See Projects</a>
-   </div>
-  </div>
-
-  <div class="hero-card" id="heroCard">
+<div class="hero-wrapper">
+  <div class="hero-image"></div>
+  <div class="hero-text">
     <h1>Welcome to My Portfolio</h1>
     <p>Scroll to explore 3D design, motion, and interactivity.</p>
     <a href="projects.html" class="hero-button">See Projects</a>
   </div>
+</div>
 
-<!--END OF HEARO SECTION-->
+
+<!--END OF HERO SECTION-->
 
   <!-- NEW SECTION: Work Philosophy / Value -->
   <section id="approach" class="section">
