messing aorung with nav menu

--- a/index.html
+++ b/index.html
@@ -59,11 +59,20 @@
       </svg>
       </div>
     </a>
+  
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <nav class="header-nav">
-      <a href="#projects">Projects</a>
+    <div class="topnav">
+    <div id="header-nav">
+      <a href="/projects.html">Projects</a>
       <a href="#contact">Contact</a>
-    </nav>
+    </div>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+    </div>
+
+
   </header>  
 <!--END OF HEADER-->
 
@@ -101,7 +110,7 @@
       <h2>My process is iterative, intentional, and deeply personal.</h2>
       <p>We’ll prototype together—each version bringing us closer to something that not only looks good but feels true. 
       </p>
-      
+
       <p>
         I believe that every brand, every project, and every idea has a story inside it. Our job is to find it. Together, we’ll build a system that reflects your values, tells your story, and captures attention in all the right ways.
       </p>
@@ -149,6 +158,8 @@
       <a href="mailto:asajernigan1894@gmail.com" class="hero-button">Get in Touch</a>
     </div>
   </section>
+
+  <script src="/script.js"></script>
 
 </body>
 </html>
