--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/header.css" />
+  <link rel="stylesheet" href="/css/footer.css" />
   <link rel="stylesheet" href="/css/hero-section.css" />
   <link rel="stylesheet" href="/css/approach.css" />
   <link rel="stylesheet" href="/css/buttons.css" />
@@ -15,6 +16,7 @@
   href="https://fonts.googleapis.com/css?family=Noto+Sans:regular,bold">
 </head>
 <body>
+  <div class="page-wrapper">
 
   <!--HEADER-->
   <header class="site-header">
@@ -158,6 +160,18 @@
       <a href="mailto:asajernigan1894@gmail.com" class="hero-button">Get in Touch</a>
     </div>
   </section>
+  </div>
+
+  <footer class="site-footer">
+    <div class="footer-content">
+      <p>&copy; 2025 Asa Jernigan. All rights reserved.</p>
+      <div class="footer-links">
+        <a href="mailto:asajernigan1894@gmail.com">Email</a>
+        <a href="/projects.html">Projects</a>
+        <a href="#contact">Contact</a>
+      </div>
+    </div>
+  </footer>
 
   <script src="/script.js"></script>
 
