adding an orbiting rocket

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <link rel="stylesheet" href="/css/header.css" />
   <link rel="stylesheet" href="/css/footer.css" />
   <link rel="stylesheet" href="/css/hero-section.css" />
-  <link rel="stylesheet" href="/css/approach.css" />
+  <link rel="stylesheet" href="/css/content.css" />
+  <link rel="stylesheet" href="/css/orbit.css" />
   <link rel="stylesheet" href="/css/buttons.css" />
   <link rel="stylesheet" href="/css/cards.css" /> 
   <link rel="stylesheet"
@@ -97,7 +98,24 @@
   <section id="approach" class="section">
     <div class="content">
 
+      <div id="exploration">
       <h2>Working with me means choosing exploration.</h2>
+
+      <div class="orbit-wrapper">
+        <div class="orbit-path"></div>
+        <div class="planet"></div>
+      
+        <div class="orbit">
+          <svg class="rocket" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64">
+            <g fill="white">
+              <path d="M32 2C20 14 20 34 32 62c12-28 12-48 0-60z"/>
+              <circle cx="32" cy="20" r="4" fill="black"/>
+              <path d="M24 40l-6 10 6-2 4 4V40z"/>
+              <path d="M40 40l6 10-6-2-4 4V40z"/>
+            </g>
+          </svg>
+        </div>
+      </div>
 
       <p>I help you take what’s in your head—and your heart—and bring it to life in ways that are clear, captivating, and expressive.</p> 
         
