--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               </p>
     
               <div class="process-container">
-                <h2>My process is iterative, intentional, and deeply personal.</h2>
+                <h2>My process is:</h2>
                 <div id="my-process">
     
                   <div class="process">
