--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           <section class="hero-section">
             <div class="hero-image"></div>
             <div class="hero-text">
-              <h1>Welcome to My Portfolio</h1>
-              <p>Scroll to explore 3D design, motion, and interactivity.</p>
+              <h1>3D Design, Motion Graphics & Visual Storytelling</h1>
+              <p>Discover a portfolio of immersive visuals and creative solutions crafted with precision.</p>              
               <a href="projects.html" class="hero-button">See Projects</a>
             </div>
           </section>
