--- a/index.html
+++ b/index.html
@@ -279,19 +279,22 @@
                   Together, we’ll build a system that reflects your values, tells your story, and captures attention in all
                   the right ways.
                 </p>
+                <div class="spacer"></div>
               </div>
           </section>
     
           <!-- Services Section -->
           <section id="services" class="section">
             <div class="content">
+              <div class="spacer"></div>
               <h2>What I Do</h2>
               <div class="service-grid">
                 <div class="service-card">Logo + Brand Identity</div>
-                <div class="service-card">3D Modeling & Wireframes</div>
-                <div class="service-card">Web Interactivity (HTML/CSS/JS)</div>
+                <div class="service-card">3D Visualization</div>
+                <div class="service-card">Web Design</div>
                 <div class="service-card">Conceptual Design Thinking</div>
               </div>
+              <div class="spacer"></div>
             </div>
           </section>
     
