added images and updating sections for project page

--- a/projects.html
+++ b/projects.html
@@ -111,8 +111,12 @@
 
       <div class="project-container">
 
+
+        <div class="client_work">
+          <h2>Client Work</h2>
         <div id="project-1">
           <h2>The Story Tree</h2>
+          <img src="/assets/images/StoryTree_draft_v6 copy.png" width="500px">
         </div>
 
         <div id="project-2">
@@ -121,6 +125,20 @@
 
         <div id="project-3">
           <h2>Anser</h2>
+        </div>
+        </div>
+
+        <div class="personal-work">
+          <h2>Personal Work</h2>
+
+          <div id="akai">
+            <h2>AKAI II</h2>
+          </div>
+
+          <div id="NOTW">
+            <h2>Neck of the Woods</h2>
+          </div>
+
         </div>
         
       </div>
