working on poroject card grids

--- a/projects.html
+++ b/projects.html
@@ -114,23 +114,29 @@
 
         <div class="client_work">
           <h2>Client Work</h2>
-        <div class="project-card" id="project-1">
-          <h2 class="card-title">The Story Tree</h2>
-          <h3 class="client-name">Client: Dani Abernathy</h3>
-          <h4 class="tools">Tools Used: Blender, Adobe Illustrator</h4>
-          <p>The goal of this project was to design a teaching resource that was engaging and simple enough to grasp. I was inspired by the magic and simplicity of pop-up books. I used Adobe Illustrator for the initial shapes but then created the final piece using Blender. I find the tactile nature that blender provides is such a joy to work in and this project allowed for creative exploration while also staying simple in scope.</p>
-          <img class="project-img" src="/assets/images/StoryTree_draft_v6 copy.png" width="500px" height="500px">
-          <button>Explore</button>
-        </div>
+        <div class="project-grid">
+          <div class="project-card" id="project-1">
+              <div class="card-grid">
+                <h2 class="card-title">The Story Tree</h2>
+                <div class="client-tools">
+                  <p>Client: Dani Abernathy</p>
+                  <p>Tools Used: Blender, Adobe Illustrator</p>
+                </div>
+                <p>The goal of this project was to design a teaching resource that was engaging and simple enough to grasp. I was inspired by the magic and simplicity of pop-up books. I used Adobe Illustrator for the initial shapes but then created the final piece using Blender. I find the tactile nature that blender provides is such a joy to work in and this project allowed for creative exploration while also staying simple in scope.</p>
+                <img class="project-img" src="/assets/images/StoryTree_draft_v6 copy.png" width="500px" height="500px">
+                <button class="explore-button">Explore</button>
+              </div>
+          </div>
 
-        <div class="project-card" id="project-2">
-          <h2>HUH</h2>
-        </div>
+          <div class="project-card" id="project-2">
+            <h2>HUH</h2>
+          </div>
 
-        <div class="project-card" id="project-3">
-          <h2>Anser</h2>
+          <div class="project-card" id="project-3">
+            <h2>Anser</h2>
+          </div>
         </div>
-        </div>
+      
 
         <div class="personal-work">
           <h2>Personal Work</h2>
